data/all_generated_tests/raw_wast_tests/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2095.wast
;; 6. **Test 6: Loop within If-Then Block Calling Imported Function**:    - Description: Include looping constructs within the `then` block of an `if` instruction that call an imported function, validating iterations' impact on stack and control flow.    - Specific Constraint: Loop must maintain stack's state as per `blocktype` between iterations and function calls.    - Relation to Control Flow: Ensures loops within `if` blocks calling across modules manage stacks and labels accurately.

(assert_invalid
  (module
    (import "env" "external_function" (func $external_function))
    (func $test_func
      (i32.const 1)
      (if (result i32)
        (then
          (loop
            (call $external_function)
            (br_if 0 (i32.const 0))
          )
          (i32.const 42)
        )
      )
    )
  )
  "type mismatch"
)